fix bugs after test
